fixed horizontal scrollbar

--- a/src/scss/components/itemPages/legendary-page.scss
+++ b/src/scss/components/itemPages/legendary-page.scss
@@ -13,80 +13,6 @@ h1 {
     font-size: 3.75rem;
   }
 }
-.help-icon {
-  color: white;
-  font-size: 3rem;
-  position: fixed;
-  right: 1rem;
-  top: 6rem;
-  cursor: pointer;
-  @media only screen and (min-width: 600px) {
-    top: 8rem;
-  }
-}
-.close-btn {
-  font-size: 3rem;
-  position: absolute;
-  right: -1rem;
-  top: -1rem;
-  cursor: pointer;
-}
-h2 {
-  font-family: $sub-font;
-  font-size: 3rem;
-}
-.help-popup {
-  background-color: #d6cfda;
-  position: fixed;
-  right: -400px;
-  width: 300px;
-  text-align: justify;
-  color: $sub-color;
-  padding: 1rem;
-  font-family: $text-font;
-  font-size: 1.6rem;
-  line-height: 2rem;
-  border-radius: 0 0 0 2rem;
-  transition: all 0.7s ease-in-out;
-  ol {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-  @media only screen and (min-width: 400px) {
-    padding: 2rem;
-  }
-  @media only screen and (min-width: 900px) {
-    padding: 3rem;
-  }
-}
-.help-animate-left {
-  right: 0;
-}
-.help-header {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  padding-bottom: 1rem;
-  justify-content: space-between;
-  position: relative;
-}
-.help-text {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-.api-step {
-  display: grid;
-  grid-template-columns: 1fr 12fr;
-  align-items: flex-start;
-}
-.important-text {
-  font-family: $sub-font;
-  font-size: 1.5rem;
-  line-height: 1.8rem;
-  padding-top: 1rem;
-}
 
 .sections-container {
   display: grid;
