--- a/src/scss/components/layout/layout.scss
+++ b/src/scss/components/layout/layout.scss
@@ -9,10 +9,16 @@ body {
   background-position: center;
   background-attachment: fixed;
 }
+.layout {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
 header {
   background-color: $header-bg;
   color: $header-text;
   padding: 1.5rem 0;
+  position: relative;
   @media only screen and (min-width: 600px) {
     padding: 2rem 0;
   }
@@ -80,4 +86,82 @@ nav {
 // }
 .home {
   font-size: 3rem;
+}
+//help popup//
+.help-icon {
+  color: white;
+  font-size: 3rem;
+  position: absolute;
+  right: 1rem;
+  top: 6rem;
+  cursor: pointer;
+  @media only screen and (min-width: 600px) {
+    top: 8rem;
+  }
+}
+.close-btn {
+  font-size: 3rem;
+  position: absolute;
+  right: -1rem;
+  top: -1rem;
+  cursor: pointer;
+}
+h2 {
+  font-family: $sub-font;
+  font-size: 3rem;
+}
+.help-popup {
+  background-color: #d6cfda;
+  position: absolute;
+  right: -400px;
+  width: 300px;
+  text-align: justify;
+  color: $sub-color;
+  padding: 1rem;
+  font-family: $text-font;
+  font-size: 1.6rem;
+  line-height: 2rem;
+  border-radius: 0 0 0 2rem;
+  transition: all 0.7s ease-in-out;
+  top: 4.6rem;
+  ol {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  @media only screen and (min-width: 600px) {
+    padding: 2rem;
+    top: 6rem;
+  }
+  @media only screen and (min-width: 900px) {
+    padding: 3rem;
+    top: 6.25rem;
+  }
+}
+.help-animate-left {
+  right: 0;
+}
+.help-header {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding-bottom: 1rem;
+  justify-content: space-between;
+  position: relative;
+}
+.help-text {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.api-step {
+  display: grid;
+  grid-template-columns: 1fr 12fr;
+  align-items: flex-start;
+}
+.important-text {
+  font-family: $sub-font;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  padding-top: 1rem;
 }
